# playground

./: .gitignore  README.md  git_new_worktree.sh
RPA/: README.md  pyautogui_a01.py  pyautogui_a02.py
ai/: AI_Agents.md  AI_Chat.md  AI_Helpers.md  AI_Models.md  AI_Providers.md  ai.yaml  books.yaml  ollama.sh  repositories.yaml
ansible/: READM.md  _ansible.sh  ansibe-play.sh  ansible.cfg
browsers/: Browsers.md  TIOBE_Index.py  _crawl_download_01.js  detail.1688.com.py  detail.tmall.com.js  http_archive.go  mp.weixin.qq.com.js  wget_download.sh
cli-utils/: dufs.sh
cloud/: cloud_a01.sh  cloud_a02_naming.sh  cloud_a03.sh  cloud_host.sh  cloud_naming.sh  clound_apps.yaml  local_domains.md  tencent_cloud.sh
coding/: coding.yaml
conda/: README.md  _conda_a01.sh  download_minicoda.sh
container/: README.md  RunlikeRemote.sh  docker_alternative.sh  docker_ip.sh  docker_macvlan.sh  docker_proxy.md  docker_tools.sh  install_on_centos.sh  podman.sh
containers/: Dockerfile  README.md  compose.network.yaml  daemon.yaml  deploy_dev.sh  docker_backup.sh  docker_build.sh  docker_buildx.sh  docker_cleanup.sh  docker_download.sh  docker_env.sh  docker_images.sh  docker_ip.sh  docker_macvlan.sh  docker_networks.sh  docker_no-egress-net.sh  docker_nvidia.sh  docker_proxy.sh  docker_remote.sh  docker_runlike.sh  docker_slim.sh  docker_tools.sh  image-list.sh  nvidia.Containerfile  nvidia.debian.sh  skopeo_download_image.sh
crawler/: TIOBE_Index.py  anjuke_fangjia_quanguo.py  block_script.js  (+7 more)
languages/Rust/p01/: Cargo.toml
languages/Rust/p01/tests/: guess_number.rs
(+3619 files in other folders)
