[package]
name = "p01"
version = "0.1.0"
edition = "2021"
default-run = "p01"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "global_a01"
path = "bin/global_a01.rs"

[[bin]]
name = "global_a02"
path = "bin/global_a02.rs"

[[bin]]
name = "global_a03"
path = "bin/global_a03.rs"

[[bin]]
name = "guess_number"
path = "bin/guess_number.rs"

[[bin]]
name = "minigrep"
path = "bin/minigrep.rs"

[dependencies]
once_cell = "1.17.1"
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.33"
